--- a/wercker.yml
+++ b/wercker.yml
@@ -17,6 +17,7 @@ build:
   - script:
       name: "go build"
       code: |
+        cp -r dist/* ${WERCKER_OUTPUT_DIR}/
         CGO_ENABLED=0 GOOS=linux  GOARCH=amd64 go build -o ${WERCKER_OUTPUT_DIR}/bin/x-tar-linux-amd64/x-tar  ./cmd/x-tar
         CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o ${WERCKER_OUTPUT_DIR}/bin/x-tar-darwin-amd64/x-tar ./cmd/x-tar
 
@@ -34,8 +35,8 @@ prerelease:
         VERSION="$(v5n store bump x-tar rc)"
         v5n apply --commit $WERCKER_GIT_COMMIT --author "Simon Menke" bin/x-tar-linux-amd64/x-tar  "$VERSION"
         v5n apply --commit $WERCKER_GIT_COMMIT --author "Simon Menke" bin/x-tar-darwin-amd64/x-tar "$VERSION"
-        tar -C bin/x-tar-linux-amd64  -f dist/x-tar-linux-amd64.tar.gz  -cz .
-        tar -C bin/x-tar-darwin-amd64 -f dist/x-tar-darwin-amd64.tar.gz -cz .
+        x-tar build -t Tarfile.linux-amd64  | gzip > dist/x-tar-linux-amd64.tar.gz
+        x-tar build -t Tarfile.darwin-amd64 | gzip > dist/x-tar-darwin-amd64.tar.gz
         ghr -u fd -r tar-utils -c $WERCKER_GIT_COMMIT --replace --prerelease "v$VERSION" ./dist
   - mbrevda/wercker-triggerbuild@0.0.10:
       token: $WRK_TOKEN
@@ -56,8 +57,8 @@ stable:
         VERSION="$(v5n store bump x-tar final+patch)"
         v5n apply --commit $WERCKER_GIT_COMMIT --author "Simon Menke" bin/x-tar-linux-amd64/x-tar  "$VERSION"
         v5n apply --commit $WERCKER_GIT_COMMIT --author "Simon Menke" bin/x-tar-darwin-amd64/x-tar "$VERSION"
-        tar -C bin/x-tar-linux-amd64  -f dist/x-tar-linux-amd64.tar.gz  -cz .
-        tar -C bin/x-tar-darwin-amd64 -f dist/x-tar-darwin-amd64.tar.gz -cz .
+        x-tar build -t Tarfile.linux-amd64  | gzip > dist/x-tar-linux-amd64.tar.gz
+        x-tar build -t Tarfile.darwin-amd64 | gzip > dist/x-tar-darwin-amd64.tar.gz
         ghr -u fd -r tar-utils -c $WERCKER_GIT_COMMIT --replace "v$VERSION" ./dist
   - mbrevda/wercker-triggerbuild@0.0.10:
       token: $WRK_TOKEN
